@@ -3,8 +3,9 @@ timed (2.44) unstable; urgency=low
   * Fixes: NB#246188 - timed <-> dsme communication broken
   * minor scratchbox improvements
   * fixed missing events due to missing transition queue processing
+  * not moving not necessary events to 'waiting' state
 
- -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 12 Apr 2011 22:10:20 +0200
+ -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 12 Apr 2011 22:12:09 +0200
 
 timed (2.43) unstable; urgency=low
 
